[project]
name = "llm-recap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "httpx-aiohttp>=0.1.12",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
]
